# Simple-Neural-Net

./: CMakeLists.txt  Math.hpp  Neuron.hpp  README.md  main.cpp
